--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@portabletext/react": "^2.0.1",
+    "@react-google-maps/api": "^2.18.1",
+    "@sanity/client": "^6.4.12",
+    "@sanity/image-url": "^1.0.2",
+    "aos": "^2.3.4",
+    "axios": "^1.3.3",
+    "framer-motion": "^9.0.2",
+    "html-react-parser": "^3.0.4",
+    "mapbox-gl": "^2.13.0",
     "next": "^13.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
+    "react-map-gl": "^7.0.21",
+    "swiper": "^9.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
