--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.5.2",
     "react-loader-spinner": "^5.3.4",
     "react-map-gl": "^7.0.21",
-    "swiper": "^9.0.4"
+    "swiper": "^9.0.4",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
