--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-intersection-observer": "^9.5.2",
     "react-loader-spinner": "^5.3.4",
     "react-map-gl": "^7.0.21",
+    "react-scroll-parallax": "^3.4.2",
+
     "swiper": "^9.0.4",
     "zustand": "^4.3.9"
   },
